# dependabot-squash

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
docs/specs/: 2026-06-30-dependabot-squash-design.md
src/dependabot_squash/: __init__.py  cli.py  dependabot_pr.py  discovery.py  lockfiles.py
src/dependabot_squash/manifests/: __init__.py  base.py  npm.py  pyproject_pep621.py  pyproject_poetry.py  requirements.py
tests/: test_discovery.py  test_gh.py  test_manifests.py  test_trailer_parser.py
