[project]
name = "dependabot-squash"
version = "0.1.0"
description = "Consolidate open Dependabot PRs into a single local commit, then close the superseded PRs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "EPFL ENAC" }]
keywords = ["dependabot", "dependencies", "automation", "github"]
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/epfl-enac/dependabot-squash"

[project.scripts]
dependabot-squash = "dependabot_squash.cli:main"
dbsquash = "dependabot_squash.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dependabot_squash"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
